--- a/mvc/CI-Platform/CI-Platform-web/Views/Shared/_Layout.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Shared/_Layout.cshtml
@@ -95,8 +95,9 @@
                 </div>
 
                 @*navbar offcanvas ends*@
-                <img class="p-1" src="~/images/logo.png">
-
+                <a href="@Url.Action("HomePage", "Home")">
+                     <img  class="p-1" src="~/images/logo.png">
+                </a>
                 @*navbar starts*@
                 <div class="d-flex d-none d-md-flex">
                     <a class="nav-item nav-link " href="#">
