--- a/mvc/CI-Platform/CI-Platform-web/Views/Story/_StoryListingPartial.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Story/_StoryListingPartial.cshtml
@@ -24,7 +24,7 @@
                             }
                             else
                             { 
-                                <img src="~/images/@default_img.Path" class="card-img-top" >
+                                <img src="~/images/Upload/Story/@default_img.Path" class="card-img-top" >
                             }
                               
                             <button class="btn-view-details-story rounded-pill px-4 py-2 position-absolute top-50 start-50 translate-middle" onclick="location.href='@Url.Action("StoryDetails","Story", new{MissionId = obj.MissionId, UserId = obj.UserId})' ">
