user profile ui design

--- a/mvc/CI-Platform/CI-Platform-web/Views/Home/MissionDetail.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Home/MissionDetail.cshtml
@@ -189,7 +189,7 @@
 
                                                 @if(u.MissionInviteToUsers.Any(i=>i.ToUserId == u.UserId)) 
                                                 {
-                                                    <span style="margin-left : 6%;" mailto:class="invited-@u.UserId"><button class="btn btn-success model-button model-invite-btn disabled" data-mission-id="@mission_id" data-from-user-id="@Id" data-to-user-id="@u.UserId">Invite</button></span>
+                                                    <span style="margin-left : 6%;" mailto:class="invited-@u.UserId"><button class="btn btn-success model-button model-invite-btn disabled" data-mission-id="@mission_id" data-from-user-id="@Id" data-to-user-id="@u.UserId">Invited</button></span>
 
                                                 } else
                                                 {
