--- a/mvc/CI-Platform/CI-Platform-web/Views/Shared/_Layout.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Shared/_Layout.cshtml
@@ -177,7 +177,7 @@
                             <img src="~/images/drop-down.png">
                         </a>
                         <ul class="dropdown-menu dropdown-menu-light" aria-labelledby="navbarDarkDropdownMenuLink">
-                            <li><a class="dropdown-item" href="#">My Profile</a></li>
+                            <li><a class="dropdown-item" href="@Url.Action("UserProfile", "User")" ">My Profile</a></li>
                             <li><a class="dropdown-item" href="#">Volunteering Timesheet</a></li>
                             <li class="dropdown-divider"></li>
                             <li>
