--- a/mvc/CI-Platform/CI-Platform-web/wwwroot/css/HomePage.css
+++ b/mvc/CI-Platform/CI-Platform-web/wwwroot/css/HomePage.css
@@ -820,12 +820,6 @@ form {
 .dropdown-toggle::after {
     margin-left: 9px !important;
 }
-
-/*media (max-width:767px){
-    .username{
-        display: none;
-    }
-}*/
 /*story listing page ends*/
 
 /*story details page starts*/
@@ -838,12 +832,70 @@ form {
     color: #757575;
     padding:  0.5rem 1.5rem;
 }
-
-
 /*story details page ends*/
 
-    @media(max-width: 1000px) {
-        #list-view {
+/*user profile page starts*/
+.user-profile-section {
+    border: 1px solid #D9D9D9;
+    border-radius: 3px;
+    padding:1rem;
+
+}
+.user-profile-section img{
+    width: 150px;
+    height:150px;
+    border:none;
+    border-radius:50%
+}
+.image-edit {
+    position: relative;
+}
+
+.image-edit:hover img {
+        filter: brightness(0.5);
+}
+
+.image-edit:hover .edit-icon {
+        display: block;
+}
+
+.edit-icon {
+    display: none;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(255, 255, 255, 0.8);
+    border-radius: 50%;
+    padding: 3px 6px;
+    cursor: pointer;
+}
+.form-underline {
+    position:relative;
+}
+.form-underline::after{
+    border:1px solid black;
+    position:absolute;
+    bottom:-2px;
+    left:0;
+    right:0;
+    content: "";
+}
+.skills-container {
+    box-shadow: 0.97px 0.26px 3px #0000000D;
+    border: 1px solid #D9D9D9;
+    border-radius: 3px;
+    opacity: 1;
+    text-align: left;
+    letter-spacing: 0px;
+    color: #414141;
+    padding: 0.5rem;
+     font: NotoSans-Light;
+     font-size:14px;
+}
+/*user profile page ends*/
+@media(max-width: 1000px) {
+    #list-view {
             display: none !important;
         }
 
